--- a/project-manager.html
+++ b/project-manager.html
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fls/'>
+<h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03fls/'>
     Construction Project Manager - Scotland  at OYO
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -250,7 +250,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4365495002'>Job Application for Launch Project Manager at Wayfair</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4365495002'>Job Application for Launch Project Manager at Wayfair</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -339,7 +339,7 @@ from low to medium cross-functional projects and programs. Characteristics.....<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oXWS9fwE&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nRyvSKw1&jvi=oXWS9fwE,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oXWS9fwE&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=nRyvSKw1&jvi=oXWS9fwE,Job&jvk=Job'>Medidata Solutions Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -371,7 +371,7 @@ in?...</p>
 <p><span class="badge badge-light">Worcester</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/csenergy/3dcc17c8-b793-4070-b697-9bb5aef52913'>CS Energy - Assistant Project Manager - NJ</a></h5> 
+<h5><a href='https://jobs.lever.co/csenergy/3dcc17c8-b793-4070-b697-9bb5aef52913'>CS Energy - Assistant Project Manager - NJ</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -415,11 +415,11 @@ in?...</p>
 <p><span class="badge badge-light">Miami, FL</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://talent-acquisition-concepts.breezy.hr/p/37473c2fa56e-civil-site-project-manager-seller-doer'>Civil/Site Project Manager (Seller/Doer) at Talent Acquisition Concepts</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talent-acquisition-concepts.breezy.hr/p/37473c2fa56e-civil-site-project-manager-seller-doer'>Civil/Site Project Manager (Seller/Doer) at Talent Acquisition Concepts</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://planate.recruiterbox.com/jobs/fk036eh/'>
+<h5><a href='https://planate.recruiterbox.com/jobs/fk036eh/'>
     Expression of Interest - Project Manager at Planate Management Group
 </a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
@@ -437,7 +437,7 @@ in?...</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://skinvision1.recruitee.com/o/project-manager'>Project Manager - SkinVision</a></h5> 
+<h5><a href='https://skinvision1.recruitee.com/o/project-manager'>Project Manager - SkinVision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... Project Manager. Job description. At SkinVision, we are on a mission to save the 
 lives of 250,000 people in the next ten years by revolutionizing the way we care?...</p>
@@ -464,7 +464,7 @@ motivated, and forward-thinking? At Codetribe you'll have the opportunity to?...
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/IKEASoutheastAsia/743999692215043-project-manager-ikea-southeast-asia-2-years-contract-'>IKEA Southeast Asia Project Manager, IKEA Southeast Asia (2 Years Contract) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/IKEASoutheastAsia/743999692215043-project-manager-ikea-southeast-asia-2-years-contract-'>IKEA Southeast Asia Project Manager, IKEA Southeast Asia (2 Years Contract) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Singapore Singapore Malaysia</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -496,7 +496,7 @@ motivated, and forward-thinking? At Codetribe you'll have the opportunity to?...
 <p><span class="badge badge-light">Jordan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://quast.workable.com/j/15C605888C'>Quast Ltd - Jobs: Project Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quast.workable.com/j/15C605888C'>Quast Ltd - Jobs: Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
