--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=obwhafwS&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nxoHTKwK'>Ingram Micro Careers - Senior Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-25</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qzYaVfwm&k=Job&j=o62R9fwS&__jvst=Employee&__jvsd=sbGZ9gwK&__jvsc=Twitter&bid=nT8HTKwQ'>Brandwatch Careers - Senior Product Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/thinkhr/2c5fa317-d44e-4367-a413-63345f30ac4c'>ThinkHR - Technical Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -54,7 +62,7 @@
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://experian.referrals.selectminds.com/jobs/product-owner-po-%E2%80%93-analista-s%C3%AAnior-13043'>Product Owner (PO) ? Analista S?nior - Experian Careers</a></h5> 
+<h5><a href='https://experian.referrals.selectminds.com/jobs/product-owner-po-%E2%80%93-analista-s%C3%AAnior-13043'>Product Owner (PO) ? Analista S?nior - Experian Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -66,11 +74,11 @@
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -132,7 +140,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/o7jK9fw3'>Numbrs Personal Finance AG Careers - Product Owner</a></h5> 
+<h5><a href='https://jobs.jobvite.com/centralway/job/o7jK9fw3'>Numbrs Personal Finance AG Careers - Product Owner</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -170,7 +178,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://adomik.workable.com/j/520CF09ACB?viewed=true'>Adomik - Jobs: Product Owner (H/F) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adomik.workable.com/j/520CF09ACB?viewed=true'>Adomik - Jobs: Product Owner (H/F) - Apply online</a></h5> 
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
@@ -249,11 +257,11 @@ responsible for the overall management of one or more technology solutions for..
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://sharpist.join.com/jobs/261518-junior-product-manager-m-f-x'>Job @ Sharpist (Berlin): (Junior) Product Manager ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sharpist.join.com/jobs/261518-junior-product-manager-m-f-x'>Job @ Sharpist (Berlin): (Junior) Product Manager ... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='https://sharpist.join.com/jobs/261736-senior-product-manager-m-f-x'>Job @ Sharpist (Berlin): Senior Product Manager (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sharpist.join.com/jobs/261736-senior-product-manager-m-f-x'>Job @ Sharpist (Berlin): Senior Product Manager (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -278,7 +286,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">Los Angeles California, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/heycar/jobs/4330861002'>Job Application for Senior Product Manager (m/f/d) at heycar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/heycar/jobs/4330861002'>Job Application for Senior Product Manager (m/f/d) at heycar</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -418,11 +426,11 @@ Munich (published: 15.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/appcues-2/86357066-813b-4e84-aa32-c13f94dc7205'>Appcues - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/appcues-2/86357066-813b-4e84-aa32-c13f94dc7205'>Appcues - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/scout24/jobs/1788490'>Job Application for Product Designer - PropTech (m/f/d) at Scout24</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/scout24/jobs/1788490'>Job Application for Product Designer - PropTech (m/f/d) at Scout24</a></h5> 
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -448,14 +456,6 @@ experience and business results. 2+ years of hands on software development?...</
 <p>Posted on: 2019-07-23</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJIaVfwg&k=Job&j=oAEqafwy&__jvst=Employee&__jvsd=seqSPhw7&__jvsc=Twitter&bid=nwkmRKwi'>MORI Associates, Inc. Careers - NASA - Software Product Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-23</p>
-<hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/ai-product-manager-dsaid-9703'>AI Product Manager : DSAID - Rakuten Careers</a></h5> 
-<p><span class="badge badge-light">Tokyo Tokyo, Japan</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=odOlafwg&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nTlkRKwE'>NICE Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
